# pose_estimation

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: pose_estimation.rviz
dope/: CMakeLists.txt
dope/config/: config_pose.yaml
dope/launch/: camera_rs.launch
dope/weights/: README.md
find_obj/: CMakeLists.txt  package.xml
find_obj/launch/: pose_estimation.launch
find_obj/rviz/: rviz_dope.rviz
find_obj/src/: transform_coords.py
launch/: pose_estimation.launch  pose_estimation.launch.py  xarm.launch.py
rviz/: rviz.rviz
src/: move2object.cpp  transform_coords.py  transform_coords1.py  transform_pose.cpp
